# Neural-Text-Normalization

./: .gitignore  README.md  decoder_ft.py  export.py  generate_decoder_dataset.py  get_shape.py  quant.py  requirements.txt  tagger_ft.py  test.py  upsample.py
cpp/: CMakeLists.txt  build.sh  debug.cpp  debug_tokenizer.cpp
cpp/include/: decoder.h  processor.h  tagger.h  utils.h  wordpiece.h
cpp/src/: decoder.cpp  processor.cpp  tagger.cpp  utils.cpp  wordpiece.cpp
scripts/: accelerate_config.yaml  download.sh  hfd.sh  run_decoder.sh  run_tagger.sh
